--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 /* Typeface: Cormorant Garamond body + headings, Goudy Initialen drop caps */
 
 @import url('https://fonts.cdnfonts.com/css/goudy-initialen');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&display=swap');
 
 :root{
   --bg: #faf8f4;
@@ -27,7 +26,7 @@ html,body{
   color:var(--text);
   font-family: var(--font-serif);
   font-size: 21px;
-  font-weight: 400;
+  font-weight: 500;
   line-height:1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -50,7 +49,7 @@ html,body{
 h2{
   font-family: var(--font-serif);
   font-size: 29px;
-  font-weight: 400;
+  font-weight: 500;
   margin: 24px 0 8px 0;
 }
 
@@ -61,7 +60,7 @@ h2{
 }
 
 strong, b{
-  font-weight: 400;
+  font-weight: 600;
 }
 
 hr{
